log
Thu 21 Mar 2024 01:33:12 AM UTC: 
 tests:  0|5
total_score: 0/70
2387a1a
Thu 21 Mar 2024 01:38:23 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b559e57
Thu 21 Mar 2024 01:40:38 AM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2b99bd2
Thu 21 Mar 2024 01:40:55 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
d2bbaf9
Thu 21 Mar 2024 01:43:58 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:7: error: implicit declaration of function ‘pushfront’; did you mean ‘pushFront’? [-Werror=implicit-function-declaration]
   51 |       pushfront(L, dato);
      |       ^~~~~~~~~
      |       pushFront
cc1: all warnings being treated as errors
Compilation failed
62dd76c
Thu 21 Mar 2024 01:44:06 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
b7215d0
Thu 21 Mar 2024 01:46:43 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:91:11: error: too many arguments to function ‘popCurrent’
   91 |           popCurrent(L, dato);
      |           ^~~~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
Compilation failed
9f52d96
Thu 21 Mar 2024 01:47:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:91:11: error: dereferencing ‘void *’ pointer [-Werror]
   91 |           *popCurrent(L);
      |           ^~~~~~~~~~~~~~
exercises.c:87:14: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
   87 |   while(dato != NULL)
      |              ^
cc1: all warnings being treated as errors
Compilation failed
d25c034
Thu 21 Mar 2024 01:47:40 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:93:11: error: dereferencing ‘void *’ pointer [-Werror]
   93 |           *popCurrent(L);
      |           ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c09c58
Thu 21 Mar 2024 01:47:59 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
423f520
Thu 21 Mar 2024 01:52:32 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
c91242c
Thu 21 Mar 2024 01:54:03 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
6c90ff2
Thu 21 Mar 2024 01:57:50 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:111:14: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
  111 |   while(dato != NULL)
      |              ^
cc1: all warnings being treated as errors
Compilation failed
6cdcda9
Thu 21 Mar 2024 01:57:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
75a4819
Thu 21 Mar 2024 01:58:17 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
2764274
Thu 21 Mar 2024 02:00:35 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
0bf4184
Thu 21 Mar 2024 02:01:17 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
1670948
Thu 21 Mar 2024 02:01:43 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:128:14: error: ‘p2’ undeclared (first use in this function); did you mean ‘P2’?
  128 |   dato = top(p2);
      |              ^~
      |              P2
exercises.c:128:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8e79943
Thu 21 Mar 2024 02:01:46 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
8ec3fa1
Thu 21 Mar 2024 02:03:16 AM UTC: 
 exercises.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  4|1
total_score: 50/70
5818f80
Thu 21 Mar 2024 02:06:18 AM UTC: 
 exercises.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
c730ef7
